--- a/scripts/R37_covariates_contribution.Rmd
+++ b/scripts/R37_covariates_contribution.Rmd
@@ -39,7 +39,41 @@ metadata <- read.csv(paste0(proj_home, "/data/153_combined_META.csv")) %>%
   # Remove the rows where 'disease_lineage' is NA.
   filter(!is.na(disease_lineage)) |> 
   select(-disease.simple)
+
+colnames(metadata)
 ```
+
+```{r}
+# tally how many samples and patients were removed
+df <- read.csv(paste0(proj_home, "/data/153_combined_META.csv")) %>% 
+  select(c(sampleid, empirical, timebin, fg_egg, fg_fruit, fg_grain, fg_legume, fg_meat, fg_milk, fg_oils, fg_sweets, fg_veggie, TPN, EN, pid)) %>%
+  left_join(clinical_cov, by = "pid") %>%
+  #select(-pid) %>%
+  mutate(
+    disease_lineage = case_when(
+      disease.simple %in% c("AML", "MDS/MPN", "CML") ~ "Myeloid",
+      disease.simple %in% c("NHL", "ALL", "Myeloma", "CLL", "Hodgkins") ~ "Lymphoid",
+      TRUE ~ NA_character_
+    )
+  ) 
+
+total_na_samples <- df |>
+  filter(is.na(disease_lineage)) |>
+  nrow()
+
+print(paste("Total samples (sampleid) with NA in disease_lineage:", total_na_samples))
+
+# 2. Get the number of unique patients (pid) who have at least one NA
+
+unique_na_patients <- df |>
+  filter(is.na(disease_lineage)) |>
+  distinct(pid) |>
+  nrow()
+
+print(paste("Number of unique patients (pid) with NA in disease_lineage:", unique_na_patients))
+  
+```
+
 
 ```{r}
 otu_table <- read.csv(paste0(proj_home, "/data/R25_asv_counts.csv")) %>%
